--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -14,6 +14,13 @@ dependencies:
   carousel_slider: 4.0.0
   shared_preferences: 2.0.7
   provider: 6.0.0
+  flutter_localizations:
+    sdk: flutter
+  firebase_core: ^2.6.0
+  firebase_core_web: ^2.11.3
+  firebase_auth: ^4.17.3
+  go_router: ^13.1.0
+  firebase_ui_auth: ^1.7.0
 
 dev_dependencies:
   flutter_test:
